[package]
name = "wireguard-uapi"
version = "1.0.4"
edition = "2018"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
license = "MIT"
repository = "https://github.com/gluxon/wireguard-uapi-rs"
description = "Control WireGuard interfaces."
readme = "README.md"

[dependencies]
derive_builder = "0.9.0"
libc = "0.2.71"
neli = "0.4.3"
thiserror = "1.0.19"
ipnet = "2.3.0"

[dev-dependencies]
anyhow = "1.0.31"
base64 = "0.12.1"
colored = "1.9.3"
predicates = "1.0.4"
rand = "0.7.3"
